CMSC-907 Code Quality with PMD Add final modifier to Util classes Add final modifier to Logger instances Change Boolean, Integer and Long instantiation to valueOf calls
git-svn-id: https://scm.mmbase.org/mmbase/trunk@28586 91430c5f-d668-0410-9e7d-dd663366dcfd