@@ -59,7 +59,7 @@ public class RepositoryInfo implements TreeInfo {
       }
 
       if (openChannels.contains(number)) {
-         openChannels.remove(new Integer(number));
+         openChannels.remove(Integer.valueOf(number));
       }
    }
 
