@@ -19,10 +19,10 @@ public class NumberListImageCaptchaEngine extends ListImageCaptchaEngine {
 
    protected void buildInitialFactories() {
       WordGenerator wordGenerator = new RandomWordGenerator("0123456789");
-      TextPaster textPaster = new RandomTextPaster(new Integer(5), new Integer(6), Color.BLACK);
-      BackgroundGenerator backgroundGenerator = new GradientBackgroundGenerator(new Integer(180), new Integer(40),
+      TextPaster textPaster = new RandomTextPaster(Integer.valueOf(5), Integer.valueOf(6), Color.BLACK);
+      BackgroundGenerator backgroundGenerator = new GradientBackgroundGenerator(Integer.valueOf(180), Integer.valueOf(40),
             Color.GRAY, Color.WHITE);
-      FontGenerator fontGenerator = new TwistedAndShearedRandomFontGenerator(new Integer(16), new Integer(22));
+      FontGenerator fontGenerator = new TwistedAndShearedRandomFontGenerator(Integer.valueOf(16), Integer.valueOf(22));
       WordToImage wordToImage = new ComposedWordToImage(fontGenerator, backgroundGenerator, textPaster);
       this.addFactory(new GimpyFactory(wordGenerator, wordToImage));
    }
